--- a/movieApp/templates/movieApp/index.html
+++ b/movieApp/templates/movieApp/index.html
@@ -6,7 +6,6 @@
     <title>MovieApp</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'movieApp/css/style.css' %}">
-    <link rel="stylesheet" href="{% static 'movieApp/css/app.css' %}">
 </head>
 
 <body>
@@ -25,10 +24,8 @@
         
     <form class="search-form" action="" name="search">
         <input type="text" name="query" value="{{ request.GET.query }}">
-        <input type="submit" value="search">
+        <input type="submit" value="search" class="btn btn-primary">
     </form> <hr>
-
-    <button class="btn btn-primary" data-toggle="modal" data-target="#modal-create">Create</button>
     
     <div class="movies-flex-box">
 
