--- a/movieApp/static/movieApp/css/style.css
+++ b/movieApp/static/movieApp/css/style.css
@@ -1,15 +1,18 @@
+@import url("https://fonts.googleapis.com/css?family=Raleway&display=swap");
+
 body {
-    margin-left: 20px;
-    margin-right: 20px;
+    font-family: 'Raleway', sans-serif;
+    width: 90%;
+    background-image: url("https://cdn.pixabay.com/photo/2017/03/02/08/58/background-texture-2110724__340.jpg");
+    background-blend-mode: lighten;
+    background-size: cover;
+    background-color: rgba(255, 255, 255, 0.3);
 }
 .nav-bar {
     width: 100%;
     height: 80px;
-    background-color: #333;
+    background-color: rgb(111, 116, 113);
     margin: 10px 5px 40px;
-}
-nav {
-
 }
 .nav-logo {
     float: left;
@@ -17,7 +20,7 @@ nav {
 }
 .nav-logo a{
     text-decoration: none;
-    color: rgb(199, 70, 70);
+    color: rgb(83, 70, 199);
     display: block;
     text-transform: uppercase;
     letter-spacing: 1px;
@@ -31,7 +34,7 @@ nav {
 .nav-menu li a{
     float: right;
     font-size: 28px;
-    color: rgb(199, 70, 70);
+    color: rgb(83, 70, 199);
     text-decoration: none;
     display: block;
     margin: 10px;
@@ -43,13 +46,12 @@ nav {
     color: rgb(117, 181, 192);
 }
 .search-form {
-    padding-bottom: 30px; 
+    margin: 50px 0px; 
 }
 .movies-flex-box {
     display: flex;
-}
-.movies {
-    flex-wrap: wrap;
+    flex-flow: row wrap;
+    justify-content: space-around;
 }
 .movies img{
     height: 500px;
