--- a/movieApp/templates/movieApp/create-modal.html
+++ b/movieApp/templates/movieApp/create-modal.html
@@ -1,10 +1,12 @@
-<div id="modal-create">
-    <div>
-        <h5 id="modalLabel">Create</h5>
-        <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>    
-    </div>
+<div id="modal-create-movie" class="modal-movie">
+    <div class="modal-content">
 
-    <div>
+        <div style="padding-bottom: 10px;">
+            <h5 style="float: left;">Create</h5>
+            <button type="button" class="close" id="closeModalBtn"><span>&times;</span></button>    
+        </div>
+        
+        
         <form action="{% url 'movie_create' %}" method="POST">
             {% csrf_token %}
             <div>
@@ -29,5 +31,8 @@
 
             <button type="submit" class="btn btn-primary">Create new movie</button>
         </form>
+    
+        
     </div>
 </div>
+
