--- a/movieApp/templates/movieApp/create-modal.html
+++ b/movieApp/templates/movieApp/create-modal.html
@@ -3,7 +3,7 @@
 
         <div style="padding-bottom: 10px;">
             <h5 style="float: left;">Create</h5>
-            <button type="button" class="close" id="closeModalBtn"><span>&times;</span></button>    
+            <button type="button" class="Close" id="closeModalBtn"><span>&times;</span></button>    
         </div>
         
         
@@ -26,7 +26,7 @@
 
             <div>
                 <label for="movieNotes">Notes</label>
-                <textarea name="" id="moiveNotes" name="Notes"></textarea>
+                <textarea name="Notes" id="moiveNotes" name="Notes"></textarea>
             </div>
 
             <button type="submit" class="btn btn-primary">Create new movie</button>
