--- a/movieApp/templates/movieApp/index.html
+++ b/movieApp/templates/movieApp/index.html
@@ -4,6 +4,8 @@
 <html>
 <head>
     <title>MovieApp</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'movieApp/css/style.css' %}">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.9.0/css/all.css">
@@ -34,13 +36,18 @@
         <div class="movies-flex-box">
 
             {% for movie in search_result %}
-            <div class="movies">
-                <img src="{{ movie.fields.Pictures.0.url }}" alt="">    
-                <i class="far fa-star"><p>{{ movie.fields.Rating }}/10</p></i>
-                <h3>{{ movie.fields.Name }}</h3>
-                <p>{{ movie.fields.Notes }}</p>
-                
-            </div>
+
+                <div class="movies">
+                    <img src="{{ movie.fields.Pictures.0.url }}" alt="">    
+                    <i class="far fa-star"><p>{{ movie.fields.Rating }}/10</p></i>
+                    <h3>{{ movie.fields.Name }}</h3>
+                    <button class="btn btn-warning" id="openDetail">Detail</button>
+                    <p>{{ movie.fields.Notes }}</p>
+                    <p> {{ movie.id }} </p>
+                </div>
+
+                {% include 'movieApp/edit-modal.html' %}
+                {% include 'movieApp/detail-modal.html' %}
             {% endfor %}
 
         </div>
@@ -49,5 +56,8 @@
     </div>
     
     <script src="{% static 'movieApp/js/main.js' %}"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
