--- a/movieApp/templates/movieApp/create-modal.html
+++ b/movieApp/templates/movieApp/create-modal.html
@@ -11,7 +11,7 @@
             {% csrf_token %}
             <div>
                 <label for="movieName">Name</label>
-                <input type="text" id="movieName" placeholder="Enter name" name="Name">
+                <input type="text" id="movieName" placeholder="Enter name" name="Name" required>
             </div>
 
             <div>
@@ -21,7 +21,7 @@
 
             <div>
                 <label for="movieRating">Rating</label>
-                <input type="number" id="movieRating" placeholder="1-10" min="1" max="10" name="Rating">
+                <input type="number" id="movieRating" placeholder="1-10" min="1" max="10" name="Rating" required>
             </div>
 
             <div>
