--- a/movieApp/templates/movieApp/index.html
+++ b/movieApp/templates/movieApp/index.html
@@ -25,6 +25,15 @@
         </nav>
     </div>
 
+    {% if messages %}
+        {% for message in messages %}
+            <div class="alert alert-{{ message.tags }}">
+                <a href="#" class="close" data-dismiss="alert"></a>
+                {{ message }}
+            </div>
+        {% endfor %}
+    {% endif %}
+
     <div class="main-content">
 
         <form class="search-form" action="" name="search">
