unknown changes, dont remember those... was a long time ago

--- a/movieApp/templates/movieApp/base.html
+++ b/movieApp/templates/movieApp/base.html
@@ -1,1 +1,63 @@
- 
+{% load static %}
+<!DOCTYPE html>
+
+<html>
+<head>
+    <title>MovieApp</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'movieApp/css/style.css' %}">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.9.0/css/all.css">
+</head>
+
+<body>
+
+    <div>
+        <div class="nav-wrapper">
+            <nav class="nav-bar">
+                <ul>
+                    <li><a href=" {% url 'home_page' %} ">The coolest movies</a></li>
+                    <li><a href="">Categories</a></li>
+                    <li><a href="">Top</a></li>
+                </ul> 
+            </nav>
+        </div>
+
+        <div class="sub-nav-bar ">
+            <nav class="nav-bar">
+                <ul>
+                    <li><a href=" {% url 'home_page' %} ">The coolest movies</a></li>
+                    <li><a href="">Categories</a></li>
+                    <li><a href="">Top</a></li>
+                </ul> 
+            </nav>
+        </div>
+        <div class="category-pointer">
+            
+        </div>
+    </div>
+
+
+    {% block content %}
+    {% endblock %}
+    
+    <div class="footer-wrapper">
+        <footer class="footer">
+            <div class="footer-info">
+                <ul></ul>
+            </div>
+            <hr>
+            <ul>
+                <li><p>Copyright @ {% now 'Y'%} watchMOVIES-ONLINE. All rights reserved</p></li>
+                <li><p>Privacy Policy</p></li>
+                <li><p>Contact</p></li>
+            </ul>
+        </footer>
+    </div>
+
+    <script src="{% static 'movieApp/js/main.js' %}"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+</body>
+</html>
