--- a/movieApp/static/movieApp/css/style.css
+++ b/movieApp/static/movieApp/css/style.css
@@ -1,48 +1,47 @@
 /*@import url("https://fonts.googleapis.com/css?family=Raleway&display=swap");
 */
 
+html, body {
+    margin: 0px;
+    padding: 0px;
+    min-height: 100%;
+    height: 100%;
+    font-size: 16px;
+}
 body {
-    background-image: url("https://cdn.pixabay.com/photo/2017/03/02/08/58/background-texture-2110724__340.jpg");
-    background-blend-mode: lighten;
+    background-color: rgb(231, 231, 226);
+}
+.nav-wrapper{
+    background-image: url("http://wallpoper.com/images/00/31/33/51/black-background_00313351.jpg");
+    background-repeat: no-repeat;
     background-size: cover;
-    background-color: rgba(255, 255, 255, 0.3);
-}
-.nav-bar {
+    height: 15em;
     width: 100%;
-    height: 80px;
-    background-color: rgb(111, 116, 113);
-    margin: 10px 5px 50px;
+    text-align: center;
 }
-.nav-logo {
-    float: left;
-    font-size: 35px;
+.nav-bar{
+    display: inline-block;
 }
-.nav-logo a{
-    text-decoration: none;
-    color: rgb(83, 70, 199);
-    display: block;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    line-height: 80px;
-    padding-left: 10px;
-}
-.nav-menu li{
+.nav-bar ul{
     list-style: none;
-    margin-right: 20px;
 }
-.nav-menu li a{
-    float: right;
-    font-size: 28px;
-    color: rgb(83, 70, 199);
+.nav-bar ul li{
+    float: left;
+}
+.nav-bar ul li a{
+    color: silver;
     text-decoration: none;
-    display: block;
-    margin: 10px;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    line-height: 60px;
+    padding-right: 0.5em;
 }
-.nav-menu li a:hover {
-    color: rgb(117, 181, 192);
+.sub-nav-bar{
+    height: 2.5em;
+    background-color: rgb(36, 34, 34);
+    width: 100%;
+    text-align: center;
+}
+.category-pointer{
+    height: 2.5em;
+    background-color: rgb(185, 184, 184);
 }
 .main-content {
     margin: 0px 30px;
@@ -57,16 +56,18 @@ body {
     padding: 20px 10px;
 }
 .movies {
-    width: 33.33333%;
+    width: 33.3%;
     position: relative;
+    border: 0.3em solid grey;
+    overflow: hidden;
 }
 .movies h3{
     color: black;
 	background: white;
     text-align: center;
     font-family: Anton;
-    margin-top: -3px;
-    padding: 8px;
+    margin-top: -0.1px;
+    padding: 0.5em;
 }
 .movies img{
 	width: 100%;
