--- a/movieApp/templates/movieApp/detail-modal.html
+++ b/movieApp/templates/movieApp/detail-modal.html
@@ -1,19 +1,26 @@
-<div id="modal-detail-movie" class="modal-movie">
-    <div class="modal-content">
-        <div>
-            <h4> {{ movie.fields.Name }} </h4>
-            <button type="button" class="Close" id="closeDetail">
-                <span>&times;</span>
-            </button>
-        </div>
-        <div>
-            <img src="{{ movie.fields.Pictures.0.url }}" alt="">
-            <i class="far fa-star"><p> {{ movie.fields.Rating }}/10 </p></i>
-            <p> {{ movie.fields.Notes }} </p>
-            <p> {{ movie.id }} </p>
-            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#edit-modal-{{movie.id}}">Edit</button>
-            
-            <a href="{% url 'movie_delete' id=movie.id %}" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete {{movie.fields.Name}} movie?')">Delete</a>
+<div class="modal fade" id="modal-{{movie.id}}">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="modalName">{{movie.fields.Name}}</h5>
+                <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
+            </div>
+            <div class="modal-body">
+                <div class="movies__item full-width">
+                    <i class="movies__item-star fa fa-star hide"></i>
+                    <p class="movies__item-rating hide">{{movie.fields.Rating}}/10</p>
+                    <img class="movies__item-image" src="{{ movie.fields.Pictures.0.url }}" />
+                    <div class="movies__item-title">
+                        <p>{{ movie.fields.Notes }}</p>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" data-toggle="modal"
+                    data-target="#edit-modal-{{movie.id}}">Edit</button>
+                <a href="{% url 'movie_delete' id=movie.id  %}" class="btn btn-danger">Delete</a>
+            </div>
+
         </div>
     </div>
 </div>
