--- a/movieApp/templates/movieApp/index.html
+++ b/movieApp/templates/movieApp/index.html
@@ -15,86 +15,65 @@
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-sm navbar-dark">
+        <a class="navbar-brand" href=" {% url 'home_page' %} ">Action Hub</a>       
+        <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            
+            <form class="form-inline my-2 my-lg-0 nav-item-form">
+                <input type="text" name="query" class="form-control mx-2 nav-item-input" value="{{request.GET.query}}" />
+                <button class="btn btn-primary my-2 my-sm-0 nav-item-button" type="submit"><i class="fas fa-search"></i></button>
+            </form>
+            
+            <button type="button" class="btn btn-primary nav-item-button nav-responsive-button" data-toggle="modal" data-target="#modal-create">Create</button>
+        
+        </div>
+    </nav>
+    
+   
+    <section class="result">
+        <div class="container">
 
-    <div class="wrapper">
-        <nav class="nav">
-            <div class="container">
-                <div class="nav__menu">
-                    <a class="nav__header" href="/">Clever Movie</a>
-                    <div class="col-md-5 pull-right">
-                        <form name="search" action="" class="form-inline">
-                            <div class="form-group">
-                                <input type="text" name="query" class="form-control" value="{{request.GET.query}}" />
-                                <input type="submit" class="btn btn-primary" value="Search" />
-                            </div>
-                        </form>
-                    </div>
-    
-                    <button type="button" class="btn btn-primary pull-right" data-toggle="modal"
-                        data-target="#modal-create">Create</button>
-                </div>
+            <!-- Show notifications (if any) -->
+            {% if messages %}
+            {% for message in messages %}
+            <div class="alert alert-{{ message.tags }}">
+                <a href="#" class="close" data-dismiss="alert">&times;</a>
+                {{ message }}
             </div>
-        </nav>
-    
-        <section class="result">
-            <div class="container">
-    
-                <!-- Show notifications (if any) -->
-                {% if messages %}
-                {% for message in messages %}
-                <div class="alert alert-{{ message.tags }}">
-                    <a href="#" class="close" data-dismiss="alert">&times;</a>
-                    {{ message }}
+            {% endfor %}
+            {% endif %}
+
+            <!-- Show all movies -->
+            <div class="movies">
+                {% for movie in search_result %}
+                <div class="movies__item">
+                    <i class="movies__item-star fa fa-star hide"></i>
+                    <p class="movies__item-rating hide">{{ movie.fields.Rating }}/10</p>
+                    <button type="button" class="movies__item-expander hide" data-toggle="modal"
+                        data-target="#modal-{{movie.id}}">View Details</button>
+                    <img class="movies__item-image" src="{{ movie.fields.Pictures.0.url }}" alt="" />
+                    <div class="movie-name">
+                        <p>{{ movie.fields.Name }}</p>
+                    </div>
                 </div>
+
+                {% include 'movieApp/detail-modal.html' %}
+                {% include 'movieApp/edit-modal.html' %}
                 {% endfor %}
-                {% endif %}
-    
-                <!-- Show all movies -->
-                <div class="movies">
-                    {% for movie in search_result %}
-                    <div class="movies__item">
-                        <i class="movies__item-star fa fa-star hide"></i>
-                        <p class="movies__item-rating hide">{{ movie.fields.Rating }}/10</p>
-                        <button type="button" class="movies__item-expander hide" data-toggle="modal"
-                            data-target="#modal-{{movie.id}}">View Details</button>
-                        <img class="movies__item-image" src="{{ movie.fields.Pictures.0.url }}" alt="" />
-                        <div class="movies__item-title">
-                            <p>{{ movie.fields.Name }}</p>
-                        </div>
-                    </div>
-    
-                    {% include 'movieApp/detail-modal.html' %}
-                    {% include 'movieApp/edit-modal.html' %}
-                    {% endfor %}
-                </div>
             </div>
-        </section>
-    </div>
+        </div>
+    </section>
+
     
     {% include "movieApp/create-modal.html" %}
 
 
     
-
-    <div class="footer-wrapper">
-        <footer class="footer">
-            <div class="footer-info">
-                <ul></ul>
-            </div>
-            <hr>
-            <ul>
-                <li>
-                    <p>Copyright @ {% now 'Y'%} watchMOVIES-ONLINE. All rights reserved</p>
-                </li>
-                <li>
-                    <p>Privacy Policy</p>
-                </li>
-                <li>
-                    <p>Contact</p>
-                </li>
-            </ul>
-        </footer>
-    </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
